--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
-    "vue": "^3.2.13",
+    "vue": "^3.2.39",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "vue-class-component": "^7.2.3", 
+    "vue-property-decorator": "^8.4.1" 
   },
   "devDependencies": {
     "@types/webfontloader": "^1.0.0",
